# smart-tcp-manager

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
netopt-core/: Cargo.toml
netopt-core/src/: config.rs  i18n.rs  lib.rs  monitor.rs  optimizer.rs  policy.rs  tcp_config.rs
netopt-core/src/platform/: macos.rs  mod.rs  windows.rs
netopt-gui/: Cargo.toml
netopt-gui/src/: main.rs
netopt-service/: Cargo.toml
netopt-service/src/: main.rs
release/: checksums-sha256.txt
scripts/: github-release.sh  release.sh
