[workspace]
resolver = "2"
members = [
    "netopt-core",
    "netopt-service",
    "netopt-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Legna"]
license = "MIT"
description = "Cross-platform TCP connection optimizer for Windows and macOS"

[workspace.dependencies]
# 共享依赖
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# GUI 相关
eframe = "0.29"
egui = "0.29"

# 跨进程通信
interprocess = "2.2"

# Windows 特定
[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

