[package]
name = "netopt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for TCP connection optimization"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

